# flex-ai-sandbox-develop

./: .gitignore  CODEOWNERS  Dockerfile  README.md  feature.md  hcp.authentication.configmaps.txt  langchain_azure_openai.ipynb  llm_worker.py  phoenix_setup.py  sonar-project.properties  vitals.yaml
.github/: copilot-instructions.md
flex-ai-sandbox-develop/: .dockerignore  .env.example  langchain_azure_openai.py  langgraph_azure_openai.py  pyproject.toml  requirements.txt
flex-ai-sandbox-develop/.github/: CODEOWNERS
flex-ai-sandbox-develop/.github/workflows/: publish-package.yml
flex-ai-sandbox-develop/fx_ai_reusables/: README.md  requirements.txt
flex-ai-sandbox-develop/fx_ai_reusables/agents/datadog/: __init__.py
flex-ai-sandbox-develop/fx_ai_reusables/agents/dynatrace/: dynatrace_agent.py
flex-ai-sandbox-develop/fx_ai_reusables/agents/github/: __init__.py
flex-ai-sandbox-develop/fx_ai_reusables/agents/interfaces/: __init__.py  base_agent.py
flex-ai-sandbox-develop/fx_ai_reusables/agents/rally/: rally_agent.py
flex-ai-sandbox-develop/fx_ai_reusables/agents/servicenow/: __init__.py  servicenow_agent.py
flex-ai-sandbox-develop/fx_ai_reusables/agents/splunk/: __init__.py
flex-ai-sandbox-develop/fx_ai_reusables/authenticators/: __init__.py  constants.py
flex-ai-sandbox-develop/fx_ai_reusables/authenticators/hcp/: __init__.py
flex-ai-sandbox-develop/fx_ai_reusables/chunkers/concretes/: by_source_folder_chunker.py
flex-ai-sandbox-develop/fx_ai_reusables/chunkers/interfaces/: __init__.py
flex-ai-sandbox-develop/fx_ai_reusables/configmaps/: __init__.py
flex-ai-sandbox-develop/fx_ai_reusables/configmaps/base/: config_map_validator.py
flex-ai-sandbox-develop/fx_ai_reusables/configmaps/dtos/: config_map_dto.py
flex-ai-sandbox-develop/fx_ai_reusables/configmaps/samples/: local_file_config_map_retriever_sample.py
flex-ai-sandbox-develop/fx_ai_reusables/environment_fetcher/concrete_dotenv/: __init__.py  environment_fetcher.py  environment_fetcher_async.py
flex-ai-sandbox-develop/fx_ai_reusables/environment_fetcher/concrete_empty/: __init__.py
flex-ai-sandbox-develop/fx_ai_reusables/environment_fetcher/interfaces/: __init__.py  environment_fetch_async_interface.py  environment_fetch_interface.py
flex-ai-sandbox-develop/fx_ai_reusables/environment_fetcher/samples/: README.md  environment_fetcher_sample.py
flex-ai-sandbox-develop/fx_ai_reusables/environment_fetcher/static/: __init__.py
flex-ai-sandbox-develop/fx_ai_reusables/environment_loading/cache_aside_decorators/: azure_llm_config_and_secrets_holder_wrapper_cache_aside_decorator.py
flex-ai-sandbox-develop/fx_ai_reusables/environment_loading/domain/: hcp_config.py  piece_meal_vector_store_writer_decorator_settings.py  remote_embedding_model_config.py
flex-ai-sandbox-develop/fx_ai_reusables/environment_loading/interfaces/: azure_llm_config_and_secrets_holder_wrapper_reader_interface.py  datadog_config_reader_interface.py
flex-ai-sandbox-develop/fx_ai_reusables/helpers/: async_helpers.py
flex-ai-sandbox-develop/fx_ai_reusables/http/: __init__.py
flex-ai-sandbox-develop/fx_ai_reusables/http/exceptions/: __init__.py  http_client_send_exception.py  http_response_serializable_proxy.py
flex-ai-sandbox-develop/fx_ai_reusables/llm/: __init__.py
flex-ai-sandbox-develop/fx_ai_reusables/tools/: __init__.py  datadog_tools.py  dynatrace_tools.py  github_tools.py
flex-ai-sandbox-develop/fx_ai_reusables/vectorizers/: __init__.py
flex-ai-sandbox-develop/use_cases/Liquid_Mapper/: exceptions.py  liquidmapper.configmaps.txt
flex-ai-sandbox-develop/use_cases/liquid_template_generator/: README.md  VAULT_CONFIGURATION.md  app.py
flex-ai-sandbox-develop/use_cases/ops_resolve/: __init__.py  test_github_agent.py
(+198 files in other folders)
