[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fx-ai-reusables"
version = "0.1.0"
description = "Reusable AI/ML components for Azure OpenAI, LangChain, and enterprise AI workflows"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sloan H. Holliday", email = "sloan.h.holliday@optum.com"},
    {name = "Chris Connor", email = "chris.connor@optum.com"},
    {name = "Divyeshkumar Jain V", email = "jain_divyeshkumar@optum.com"},
    {name = "Tanmay Darmorha", email = "tanmay_darmorha@optum.com"}
]
maintainers = [
    {name = "Sloan H. Holliday", email = "sloan.h.holliday@optum.com"},
    {name = "Chris Connor", email = "chris.connor@optum.com"},
    {name = "Divyeshkumar Jain V", email = "jain_divyeshkumar@optum.com"},
    {name = "Tanmay Darmorha", email = "tanmay_darmorha@optum.com"}
]
keywords = ["ai", "azure", "openai", "langchain", "enterprise", "reusable", "components"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"

# Core dependencies for the reusables library
dependencies = [
    "langchain>=0.3.14",
    "langchain-community>=0.3.29", 
    "langchain-openai==0.3.11",
    "pydantic>=2.10.4",
    "python-dotenv>=1.0.1",
    "azure-identity==1.21.0",
    "azure-ai-documentintelligence==1.0.0",
    "tenacity",
    "deprecated",
    "xmlschema==4.1.0",
    "aiohttp>=3.11.11",
    "certifi>=2024.12.14",
    "typing_extensions>=4.12.2",
]

[project.urls]
Homepage = "https://github.com/uhg-internal/fx-ai-reusables"
Documentation = "https://github.com/uhg-internal/fx-ai-reusables/blob/main/README.md"
Repository = "https://github.com/uhg-internal/fx-ai-reusables"
Issues = "https://github.com/uhg-internal/fx-ai-reusables/issues"
Changelog = "https://github.com/uhg-internal/fx-ai-reusables/blob/main/CHANGELOG.md"

# Package discovery configuration
[tool.setuptools.packages.find]
where = ["."]
include = ["fx_ai_reusables*"]
exclude = ["tests*", "*.egg-info*", "build*", "dist*", "__pycache__*"]

# Include additional files in the package
[tool.setuptools.package-data]
"*" = ["py.typed"]

# Black code formatter configuration
[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# isort import sorting configuration
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# Pylint configuration
[tool.pylint]
max-line-length = 120
disable = [
    "missing-module-docstring",
    "missing-class-docstring", 
    "missing-function-docstring",
    "too-few-public-methods",
    "import-error"
]

# MyPy type checking configuration
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["tests/"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["fx_ai_reusables/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "-v"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]